Corrects the alignment of the news cards
Across all browsers and screen sizes.
Also corrects the alignment of the clients section at the medium screen size on all browsers.

--- a/sass/partials/sections/_clients.scss
+++ b/sass/partials/sections/_clients.scss
@@ -24,10 +24,10 @@
     //Medium and up
     @media screen and (min-width: $break-m) {
       @include flexrow;
+      justify-content: space-between;
       width: 750px;
       @include mginlrauto;
-      padding-top: 50px;
-      padding-bottom: 50px;
+      padding: 50px 15px;
     }
     //Large and Up
     @media screen and (min-width: $break-lg) {
@@ -58,14 +58,7 @@
     }
 }
 
-// .hide {
-//   display: none;
-// }
 .show {
-    // img {
-    //     height: auto;
-    //     width: 100%;
-    // }
     .tooltip {
         @include tooltip-main;
         padding: 20px;
@@ -93,13 +86,28 @@
 }
 
 .busseys-container {
-  background-image: url('/img/home-T5gi.jpg');
-  width: 188px;
-  height: 70px;
-  &:hover {
-    background-image: url('/img/home-gZQR.png');
-    width: 188px;
-    height: 70px;
+  //Medium and up
+  @media screen and (min-width: $break-m) {
+      background-image: url('/img/home-T5gi.jpg');
+      background-size: contain;
+      width: 121px;
+      height: 45px;
+      &:hover {
+        background-image: url('/img/home-gZQR.png');
+        width: 121px;
+        height: 45px;
+      }
+  }
+  //Large and Up
+  @media screen and (min-width: $break-lg) {
+      background-image: url('/img/home-T5gi.jpg');
+      width: 188px;
+      height: 70px;
+      &:hover {
+        background-image: url('/img/home-gZQR.png');
+        width: 188px;
+        height: 70px;
+      }
   }
 }
 .busseys-tooltip {
@@ -113,13 +121,28 @@
     }
 }
 .crane-container {
-  background-image: url('/img/home-BsyK.jpg');
-  width: 287px;
-  height: 70px;
-  &:hover {
-    background-image: url('/img/home-MjHw.png');
-    width: 287px;
-    height: 70px;
+  //Medium and up
+  @media screen and (min-width: $break-m) {
+      background-image: url('/img/home-BsyK.jpg');
+      background-size: contain;
+      width: 184px;
+      height: 45px;
+      &:hover {
+        background-image: url('/img/home-MjHw.png');
+        width: 184px;
+        height: 45px;
+      }
+  }
+  //Large and Up
+  @media screen and (min-width: $break-lg) {
+      background-image: url('/img/home-BsyK.jpg');
+      width: 287px;
+      height: 70px;
+      &:hover {
+        background-image: url('/img/home-MjHw.png');
+        width: 287px;
+        height: 70px;
+      }
   }
 }
 .crane-tooltip {
@@ -133,13 +156,28 @@
     }
 }
 .beat-container {
-  background-image: url('/img/home-RfLc.jpg');
-  width: 72px;
-  height: 70px;
-  &:hover {
-    background-image: url('/img/home-ukEL.png');
+  //Medium and up
+  @media screen and (min-width: $break-m) {
+    background-image: url('/img/home-RfLc.jpg');
+    background-size: contain;
+    width: 46px;
+    height: 45px;
+    &:hover {
+      background-image: url('/img/home-ukEL.png');
+      width: 46px;
+      height: 45px;
+    }
+  }
+  //Large and Up
+  @media screen and (min-width: $break-lg) {
+    background-image: url('/img/home-RfLc.jpg');
     width: 72px;
     height: 70px;
+    &:hover {
+      background-image: url('/img/home-ukEL.png');
+      width: 72px;
+      height: 70px;
+    }
   }
 }
 .beat-tooltip {
@@ -153,14 +191,30 @@
     }
 }
 .diver-container {
-  background-image: url('/img/home-jHUl.jpg');
-  width: 322px;
-  height: 70px;
-  &:hover {
-    background-image: url('/img/home-kGn4.png');
+  //Medium and up
+  @media screen and (min-width: $break-m) {
+    background-image: url('/img/home-jHUl.jpg');
+    background-size: contain;
+    width: 207px;
+    height: 45px;
+    &:hover {
+      background-image: url('/img/home-kGn4.png');
+      width: 207px;
+      height: 45px;
+    }
+  }
+  //Large and Up
+  @media screen and (min-width: $break-lg) {
+    background-image: url('/img/home-jHUl.jpg');
     width: 322px;
     height: 70px;
+    &:hover {
+      background-image: url('/img/home-kGn4.png');
+      width: 322px;
+      height: 70px;
+    }
   }
+  
 }
 .diver-tooltip {
     //Large and Up
