--- a/sass/partials/sections/_news.scss
+++ b/sass/partials/sections/_news.scss
@@ -90,17 +90,17 @@
     //Up to Medium
     @media screen and (max-width: $break-m) {
         margin-bottom: 2rem;
-        height: 613px;
+        height: 702px;
     }
     //Medium and up
     @media screen and (min-width: $break-m) {
         margin: 3rem 1rem 3rem 1rem;
-        height: 599px;
+        height: 569px;
         flex: 1;
     }
     //Large and Up
     @media screen and (min-width: $break-lg) {
-        height: 663px;
+        height: 633px;
         flex: 1;
     }
     //Extra Large
@@ -182,6 +182,10 @@
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: $semibold;
+    //Medium and up
+    @media screen and (min-width: $break-m) {
+        height: 48px;
+    }
     //Large and Up
     @media screen and (min-width: $break-lg) {
         height: 47px;
@@ -210,9 +214,24 @@
 .news-btn {
     @include button-styles;
     display: block;
-    margin: 4px auto 3px 0;
     padding: 5px 15px 5px 15px;
     line-height: 35px;
+    //Up to Medium
+    @media screen and (max-width: $break-m) {
+        margin: 0 auto 3px 0;
+    }
+    //Medium and up
+    @media screen and (min-width: $break-m) {
+        margin: 20px auto 3px 0;
+    }
+    //Large and Up
+    @media screen and (min-width: $break-lg) {
+        margin: 20px auto 3px 0;
+    }
+    //Extra Large
+    @media screen and (min-width: $break-xl) {
+        margin: 4px auto 3px 0;
+    }
 }
 
 //===== CARD FOOTER =====//
@@ -222,22 +241,38 @@
     position: relative;
     //Up to Medium
     @media screen and (max-width: $break-m) {
-        
-    }
-    //Medium and up
-    @media screen and (min-width: $break-m) {
-    
-    }
-    //Large and Up
-    @media screen and (min-width: $break-lg) {
         margin: 0 0 0 2rem;
-        padding-top: 85px;
+        padding-top: 32px;
         &::before {
             content: '';
             border-bottom: 1px solid $lightgrey;
             width: 90%;
             position: absolute;
-            top: 50px;
+            top: 4px;
+        }
+    }
+    //Medium and up
+    @media screen and (min-width: $break-m) {
+        margin: 0 0 0 2rem;
+        padding-top: 32px;
+        &::before {
+            content: '';
+            border-bottom: 1px solid $lightgrey;
+            width: 90%;
+            position: absolute;
+            top: 0;
+        }
+    }
+    //Large and Up
+    @media screen and (min-width: $break-lg) {
+        margin: 0 0 0 2rem;
+        padding-top: 40px;
+        &::before {
+            content: '';
+            border-bottom: 1px solid $lightgrey;
+            width: 90%;
+            position: absolute;
+            top: 4px;
         }
     }
     //Extra Large
@@ -339,28 +374,167 @@
     }
 }
 
-//Target IE Specifically
+//===== Target IE Specifically =====//
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     .news-body {
         display: inline-block;
     }
-    
-    .news-btn {
+    .scion-title,
+    .notable-title,
+    .job-title {
         //Up to Medium
         @media screen and (max-width: $break-m) {
-            margin: 4px 81% 3px 0;
+            height: 48px;
         }
         //Medium and up
         @media screen and (min-width: $break-m) {
-            margin: 4px 58% 3px 0;
+            height: 48px;
         }
         //Large and Up
         @media screen and (min-width: $break-lg) {
-            margin: 4px 69% 3px 0;
+            height: 47px;
         }
         //Extra Large
         @media screen and (min-width: $break-xl) {
-            margin: 4px 62% 3px 0;
+            height: 47px;
+        }
+    } 
+    .news-text {
+        margin-top: 1.5rem;
+    }
+    .news-btn {
+        display: inline-block;
+        //Up to Medium
+        @media screen and (max-width: $break-m) {
+            margin: auto auto 3px 0;
+        }
+        //Medium and up
+        @media screen and (min-width: $break-m) {
+            margin: auto auto 3px 0;
+        }
+        //Large and Up
+        @media screen and (min-width: $break-lg) {
+            margin: auto auto 3px 0;
+        }
+        //Extra Large
+        @media screen and (min-width: $break-xl) {
+            margin: auto auto 3px 0;
+        }
+    }
+    .card-footer {
+        //Up to Medium
+        @media screen and (max-width: $break-m) {
+            padding-top: 48px;
+            &::before {
+                content: '';
+                border-bottom: 1px solid $lightgrey;
+                width: 90%;
+                position: absolute;
+                top: 8px;
+            }
+        }
+        //Medium and up
+        @media screen and (min-width: $break-m) {
+            padding-top: 32px;
+            &::before {
+                content: '';
+                border-bottom: 1px solid $lightgrey;
+                width: 90%;
+                position: absolute;
+                top: 0;
+            }
+        }
+        //Large and Up
+        @media screen and (min-width: $break-lg) {
+            padding-top: 40px;
+            &::before {
+                content: '';
+                border-bottom: 1px solid $lightgrey;
+                width: 90%;
+                position: absolute;
+                top: 4px;
+            }
+        }
+        //Extra Large
+        @media screen and (min-width: $break-xl) {
+            padding-top: 32px;
+            &::before {
+                content: '';
+                border-bottom: 1px solid $lightgrey;
+                width: 95%;
+                position: absolute;
+                top: 0;
+            }
+        }
+    }
+    .notable-card {
+        .news-body {
+            .news-text {
+                //Medium and up 
+                @media screen and (min-width: $break-m) {
+                    padding-top: 22px;
+                }
+            }
+            .notable-btn {
+                //Extra Large
+                @media screen and (min-width: $break-xl) {
+                    margin-top: 24px;
+                }
+            }
+        }
+        .card-footer {
+            //Medium and up
+            @media screen and (min-width: $break-m) {
+                padding-top: 32px;
+                margin-top: 0;
+                &::before {
+                    content: '';
+                    border-bottom: 1px solid $lightgrey;
+                    width: 90%;
+                    position: absolute;
+                    top: 4px;
+                }
+            }
+            //Extra Large
+            @media screen and (min-width: $break-xl) {
+                padding-top: 28px;
+                &::before {
+                    content: '';
+                    border-bottom: 1px solid $lightgrey;
+                    width: 95%;
+                    position: absolute;
+                    top: 0;
+                }
+            }
+        }
+    }
+    .job-card {
+        .news-body {
+            .news-text {
+                //Extra Large
+                @media screen and (min-width: $break-xl) {
+                    padding-top: 24px;
+                }
+            }
+            .job-btn {
+                //Extra Large
+                @media screen and (min-width: $break-xl) {
+                    margin-top: 26px;
+                }
+            }
+        }
+        .card-footer {
+            //Extra Large
+            @media screen and (min-width: $break-xl) {
+                padding-top: 30px;
+                &::before {
+                    content: '';
+                    border-bottom: 1px solid $lightgrey;
+                    width: 95%;
+                    position: absolute;
+                    top: 4px;
+                }
+            }
         }
     }
 }
